Стили для header

--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="container header__container">
       <div class="header__menu">
         <span class="header__line"></span>
       </div>
 
-      <div class="header__text">
-        <h1 class="header__title">Friendly House</h1>
-        <p class="header__subtitle">приют для животных</p>
-      </div>
+      <img src="image/header/logo.svg" alt="Логотип" class="logo">
 
       <a href="tel:88493003957" class="header__phone">8 (849) 300 - 39 -57</a>
     </div>
