--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section class="section hero">
     <div class="container hero__container">
       <div class="hero__info">
-        <h2 class="hero__title"><span class="hero__title_orange">Сара ждёт,</span> когда найдётся её человек</h2>
+        <h2 class="hero__title"><span class="hero__title hero__title_orange">Сара ждёт,</span> когда найдётся её человек</h2>
 
         <button class="button hero__button">
           <img src="image/paw.svg" alt="">
@@ -69,7 +69,7 @@
   <section class="section help">
     <div class="container help__container">
 
-      <h2 class="help__title">Как ты можешь нам помочь?</h2>
+      <h1 class="help__title">Как ты можешь нам помочь?</h1>
 
       <ul class="help__list">
         <li class="help__item help__item_money">
@@ -80,13 +80,13 @@
           </div>
         </li>
 
-        <li class="help__item help__item_volonteer">
+        <li class="help__item help__item_volunteer">
           <div class="help__volunteer volunteer">
             <h3 class="section__title volunteer__title">Стать волонером</h3>
-            <div class="volonteer__text-wrap">
-              <p class="section__text volonteer__text">Наш приют "Friendly House" привлекает волонтеров для оказания помощи в самых разных форматах! От финансовой помощи и
+            <div class="volunteer__text-wrap">
+              <p class="section__text volunteer__text">Наш приют "Friendly House" привлекает волонтеров для оказания помощи в самых разных форматах! От финансовой помощи и
                 набирающего популярность интеллектуального волонтерства до помощи руками. </p>
-              <p class="section__text volonteer__text">Нам всегда нужна помощь с выгулом подопечных, уборкой помещений, привезти в приют корм или медикаменты, помочь с
+              <p class="section__text volunteer__text">Нам всегда нужна помощь с выгулом подопечных, уборкой помещений, привезти в приют корм или медикаменты, помочь с
                 перевозкой животных в клиники, забрать и привезти вещи
                 и много всего другого. Мы всегда рады любой помощи, присоединяйтесь к нашей дружной команде! :)</p>
             </div>
