Внес правки от куратора

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           Жми на лапку, чтобы помочь!</button>
       </div>
 
+      <img src="image/hero/dog.png" alt="" class="hero__image">
+
       <ul class="hero__list">
         <li class="hero__item hero__item_boris">Борис</li>
         <li class="hero__item hero__item_lui">Луи</li>
@@ -55,7 +57,7 @@
   <section class="section about">
     <div class="container about__container">
       <div class="about__info">
-        <h2 class="section__title">О приюте</h2>
+        <h2 class="section__title about__title">О приюте</h2>
 
         <p class="section__text section__text">Приют "Friendly House" - это целый комплекс
           для бездомных и брошенных животных. </p>
@@ -69,7 +71,7 @@
   <section class="section help">
     <div class="container help__container">
 
-      <h1 class="help__title">Как ты можешь нам помочь?</h1>
+      <h2 class="help__title">Как ты можешь нам помочь?</h2>
 
       <ul class="help__list">
         <li class="help__item help__item_money">
