--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preload" href="fonts/HelveticaNeueCyr-Medium.woff" as="font" type="font/woff" crossorigin>
 
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script type="module" src="js/index.js"></script>
   <title>Friendly house</title>
 </head>
@@ -27,6 +28,25 @@
       <div class="header__menu">
         <span class="header__line"></span>
       </div>
+
+      <nav class="header__burger burger">
+        <ul class="burger__list">
+          <li class="burger__item">
+            <a href="#about">О приюте</a>
+          </li>
+          <li class="burger__item">
+            <a href="#">Наши проекты</a></li>
+          <li class="burger__item">
+            <a href="#help">Как ты можешь помочь нам?</a>
+          </li>
+          <li class="burger__item">
+            <a href="#">Наши питомцы</a>
+          </li>
+          <li class="burger__item">
+            <a href="#contact">Контакты</a>
+          </li>
+        </ul>
+      </nav>
 
       <img src="image/header/logo.svg" alt="Логотип" class="logo">
 
@@ -56,7 +76,7 @@
     </div>
   </section>
 
-  <section class="section about">
+  <section class="section about" id="about">
     <div class="container about__container">
       <div class="about__info">
         <h2 class="section__title about__title">О приюте</h2>
@@ -70,7 +90,7 @@
     </div>
   </section>
 
-  <section class="section help">
+  <section class="section help" id="help">
     <div class="container help__container">
 
       <h2 class="help__title">Как ты можешь нам помочь?</h2>
@@ -114,7 +134,7 @@
     </div>
   </section>
 
-  <section class="section contact">
+  <section class="section contact" id="contact">
     <div class="container">
       <div class="contact__container">
         <h2 class="section__title contact__title">Ты можешь помочь нам!</h2>
