Написал разметку для секции наши проекты

--- a/index.html
+++ b/index.html
@@ -86,7 +86,77 @@
         <p class="section__text section__text section__text_wide">В приюте работает сплочённая команда, которая занимается помощью бездомным животным
           в течении многих лет. Мы заботимся о качестве жизни наших подопечных и осуществляем профессиональный медицинский уход.</p>
       </div>
-      <a href="#" class="about__link">СМИ о нас</a>
+      <a href="#" class="link about__link">СМИ о нас</a>
+    </div>
+  </section>
+
+  <section class="section projects">
+    <div class="container">
+      <h2 class="section__title projects__title">Наши проекты</h2>
+      <a href="#" class="link projects__link">Подробнее</a>
+
+      <div class="projects__content">
+
+        <ul class="projects__list">
+          <li class="projects__item">
+            <img src="image/projects/new_house.jpg" alt="" class="projects__image">
+            <div class="projects__item_info">
+              <h3 class="projects__item_title">Новый дом для животных</h3>
+              <p class="projects__item_text">Приют появился практически одновременно с созданием Фонда в ...</p>
+              <a href="" class="link projects__item_link">Подробнее</a>
+            </div>
+
+          </li>
+          <li class="projects__item">
+            <img src="image/projects/little_mod.jpg" alt="" class="projects__image">
+            <div class="projects__item_info">
+              <h3 class="projects__item_title">Маленькие модники</h3>
+              <p class="projects__item_text">Наши котики и собачки тоже любят наряжаться, чтобы красиво выглядеть ... </p>
+              <a href="" class="link projects__item_link">Подробнее</a>
+            </div>
+
+          </li>
+          <li class="projects__item">
+            <img src="image/projects/play.jpg" alt="" class="projects__image">
+            <div class="projects__item_info">
+              <h3 class="projects__item_title">Поиграй со мной!</h3>
+              <p class="projects__item_text">Новая программа нашего приюта “Поиграй со мной”. Приводите своих ...</p>
+              <a href="" class="link projects__item_link">Подробнее</a>
+            </div>
+
+          </li>
+          <li class="projects__item">
+            <img src="image/projects/best_photo.jpg" alt="" class="projects__image">
+            <div class="projects__item_info">
+              <h3 class="projects__item_title">Конкурс “Лучшее фото”</h3>
+              <p class="projects__item_text">Приходи к нам в Friendly House и делай классные фотографии наших животн...</p>
+              <a href="" class="link projects__item_link">Подробнее</a>
+            </div>
+
+          </li>
+        </ul>
+
+        <div class="projects__info">
+          <article class="article projects__article">
+            <p class="article__text">Собака лучший друг человека, или.... собаки?</p>
+          </article>
+          <div class="projects__more">
+            <h4 class="projects__info_text">Больше проектов</h4>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+            <a href="#" class="projects__info_project"></a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
