Сверстал десктоп версию секции наши проекты

--- a/index.html
+++ b/index.html
@@ -91,11 +91,8 @@
   </section>
 
   <section class="section projects">
-    <div class="container">
-      <h2 class="section__title projects__title">Наши проекты</h2>
-      <a href="#" class="link projects__link">Подробнее</a>
-
-      <div class="projects__content">
+    <div class="container projects__container">
+        <h2 class="section__title projects__title">Наши проекты</h2>
 
         <ul class="projects__list">
           <li class="projects__item">
@@ -138,25 +135,61 @@
 
         <div class="projects__info">
           <article class="article projects__article">
+            <a href="#" class="link article__link">Подробнее</a>
             <p class="article__text">Собака лучший друг человека, или.... собаки?</p>
           </article>
           <div class="projects__more">
             <h4 class="projects__info_text">Больше проектов</h4>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
-            <a href="#" class="projects__info_project"></a>
+            
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/1.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/2.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/3.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/4.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/5.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/6.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/7.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/8.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/9.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/10.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/11.jpg" alt="" class="projects__info_pic">
+            </a>
+
+            <a href="#" class="projects__info_project">
+              <img src="image/projects/12.jpg" alt="" class="projects__info_pic">
+            </a>
           </div>
         </div>
-      </div>
     </div>
   </section>
 
