--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
   <link rel="preload" href="fonts/HelveticaNeueCyr-Medium.woff" as="font" type="font/woff" crossorigin>
 
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script type="module" src="js/index.js"></script>
+  <script type="module" src="js/index.min.js"></script>
   <title>Friendly house</title>
 </head>
 
