адаптив для бургер меню и модалки

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
             <a href="#contact">Контакты</a>
           </li>
         </ul>
+        <a href="tel:88493003957" class="header__phone header__phone_mob">8 (849) 300 - 39 -57</a>
       </nav>
       
       <img src="image/header/logo.svg" alt="Логотип" class="logo">
@@ -101,7 +102,7 @@
     </div>
   </section>
 
-  <section class="section projects">
+  <!-- <section class="section projects">
     <div class="container projects__container">
         <h2 class="section__title projects__title">Наши проекты</h2>
 
@@ -330,7 +331,7 @@
         </form>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <div class="modal">
     <div class="container">
@@ -338,7 +339,7 @@
         <h2 class="section__title modal__title contact__title">Ты можешь помочь нам!</h2>
 
         <p class="section__text modal__text contact__text">Хочешь забрать питомца, стать волонтером, или опекуном?</p>
-        <p class="section__text modal__text contact__text contact__text_orange"> Свяжись с нами!</p>
+        <p class="section__text modal__text modal__text_orange contact__text contact__text_orange"> Свяжись с нами!</p>
         <div class="modal__contacts contact__contacts">
           <a href="tel:88493003957" class="modal__link contact__link contact__phone">8 (849) 300 - 39 -57</a>
           <a href="mailto:FriendlyHouse@gmail.com" class="modal__link contact__link contact__email">FriendlyHouse@gmail.com</a>
