Адаптив для секции о приюте

--- a/src/index.html
+++ b/src/index.html
@@ -93,10 +93,12 @@
       <div class="about__info">
         <h2 class="section__title about__title">О приюте</h2>
 
-        <p class="section__text section__text">Приют "Friendly House" - это целый комплекс
+        <p class="section__text about__text">Приют "Friendly House" - это целый комплекс
           для бездомных и брошенных животных. </p>
-        <p class="section__text section__text section__text_wide">В приюте работает сплочённая команда, которая занимается помощью бездомным животным
+        <p class="section__text about__text about__text_wide">В приюте работает сплочённая команда, которая занимается помощью бездомным животным
           в течении многих лет. Мы заботимся о качестве жизни наших подопечных и осуществляем профессиональный медицинский уход.</p>
+
+        <div class="about__image"></div>
       </div>
       <a href="#" class="link about__link">СМИ о нас</a>
     </div>
@@ -300,8 +302,8 @@
       <div class="contact__container">
         <h2 class="section__title contact__title">Ты можешь помочь нам!</h2>
 
-        <p class="section__text contact__text">Хочешь забрать питомца, стать волонтером, или опекуном?</p>
-        <p class="section__text contact__text contact__text_orange"> Свяжись с нами!</p>
+        <p class="section__text contact__text">Хочешь забрать питомца, стать волонтером, или опекуном? <span class="section__text contact__text contact__text_orange"> Свяжись с нами!</span></p>
+        
         <div class="contact__contacts">
           <a href="tel:88493003957" class=" contact__link contact__phone">8 (849) 300 - 39 -57</a>
           <a href="mailto:FriendlyHouse@gmail.com" class=" contact__link contact__email">FriendlyHouse@gmail.com</a>
@@ -331,7 +333,7 @@
         </form>
       </div>
     </div>
-  </section> -->
+  </section>
 
   <div class="modal">
     <div class="container">
@@ -369,7 +371,7 @@
         </form>
       </div>
     </div>
-  </div>
+  </div> -->
 
 </body>
 
