--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     })
   </script>
 
-<script src="https://api-maps.yandex.ru/2.1/?apikey=123&lang=ru_RU"></script>
+<script defer src="https://api-maps.yandex.ru/2.1/?apikey=123&lang=ru_RU"></script>
 
   <script type="module" src="js/index.min.js"></script>
   <title>Friendly house</title>
